[package]
name = "nodadhoc"
version = "0.1.0"
authors = ["m0ssc0de <hi.paul.q@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.58.1"
k8s-openapi = "0.12.0"
tokio = { version = "1.8.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kubectl-view-allocations = "0.14.3"
cmd_lib = "1.1.0"
futures = "0.3.15"